test_cases/fail/f47.lxr
SCRIPT AREA
START SCRIPT
DECLARE FLOAT f
f=5.0/0.0
END SCRIPT
